--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
 								<h2 class="resume-name text-uppercase">Mariam Ghamgui </h2>
 								<div class="resume-role-title text-uppercase">Industrial Computer Science Engineering Student</div>
 								<div class="text-center" style="margin-top: 20px;">
-									<a href="./CV_Mariam_Ghamgui .pdf" download class="btn" style="background-color: #8497bc; color: #1e2738;">Download CV</a>
+									<a href="./CV_Mariam_Ghamgui .pdf" download class="btn" style="background-color: #8497bc; color: #1e2738;">Download CV (English)</a>
+									<a href="./CV_Mariam_Ghamgui_Français.pdf" download class="btn" style="background-color: #8497bc; color: #1e2738;">Download CV (French)</a>
 								</div>
 								 
 								<div class="resume-contact mt-4">
@@ -164,7 +165,11 @@
 									<section class="resume-summary-section resume-section">
 										<h3 class="resume-section-heading text-uppercase py-2 py-lg-3 py-2 py-lg-3"><i class="resume-section-heading-icon bi bi-person me-2"></i>About Me</h3>
 										<div class="resume-summary-desc">
-											Motivated and resourceful student with a strong passion for problem-solving, innovation, and continuous learning. I am currently seeking a graduation internship where I can apply my skills and creativity in a dynamic, forward-thinking environment. I aim to collaborate with experts, contribute to impactful projects, and expand my expertise through hands-on experience in real-world challenges.										</div>
+											I have a deep passion for technology and a strong commitment to excellence. I excel at quickly grasping new concepts and thrive in environments that encourage exploration and innovation. My curiosity drives me to delve into diverse fields, and I actively seek research opportunities that challenge me to grow. <br> <br>
+
+Currently, I am eager to take on internship opportunities starting in February, where I can apply my skills and knowledge while contributing to impactful projects. <br> <br>
+
+Feel free to explore my work, and don't hesitate to reach out if you're interested in discussing potential opportunities!										</div>
 									</section><!--//resume-section-->
 									
 									<hr>
